--- a/_posts/2023-08-15-Week2-plans.md
+++ b/_posts/2023-08-15-Week2-plans.md
@@ -9,4 +9,8 @@ courses: { compsci: {week: 2} }
 permalink: /plans/week2
 ---
 
-[Utterance Generated Link](https://github.com/nighthawkcoders/student/issues/15)
+- Create CSP button on blog
+- Create Lab Notebook
+- Add JavaScript calculator to blog
+- Complete JS output with Jquery
+- Complete JS calculator
