--- a/_posts/2023-08-15-Week3-plan.md
+++ b/_posts/2023-08-15-Week3-plan.md
@@ -3,10 +3,10 @@ toc: false
 comments: true
 layout: post
 title: Week 3 Plan
-description: PBL Unit 1 / Week 3 plan using Utterance
 type: plans
 courses: { compsci: {week: 3} }
 permalink: /plans/week3
 ---
 
-[Utterance Generated Link](https://github.com/nighthawkcoders/student/issues/16)
+- Fix Lab Notebook Links
+- Complete Python IO hack (python quiz)
