--- a/_notebooks/2023-08-28-basics-js-errors.ipynb
+++ b/_notebooks/2023-08-28-basics-js-errors.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -127,7 +127,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "\n// Copy your previous code to built alphabetList here\n\nlet letterNumber = 5\n\nfor (var i = 0; i < alphabetList; i++) {\n\tif (i === letterNumber) {\n\t\tconsole.log(letterNumber + \" is letter number 1 in the alphabet\")\n\t}\n}\n\n// Should output:\n// \"e\" is letter number 5 in the alphabet\n",
+      "application/javascript": "\n// Create an array of alphabet letters\nconst alphabetList = \"abcdefghijklmnopqrstuvwxyz\";\n\n// Specify the letter you want to find the number of\nconst letterToFind = \"e\";\n\n// Find the index of the letter in the alphabet list\nconst letterNumber = alphabetList.indexOf(letterToFind) + 1;\n\n// Check if the letter exists in the alphabet\nif (letterNumber > 0) {\n  console.log(`\"${letterToFind}\" is letter number ${letterNumber} in the alphabet`);\n} else {\n  console.log(`\"${letterToFind}\" is not found in the alphabet`);\n}\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -139,18 +139,21 @@
    "source": [
     "%%js\n",
     "\n",
-    "// Copy your previous code to built alphabetList here\n",
+    "// Create an array of alphabet letters\n",
+    "const alphabetList = \"abcdefghijklmnopqrstuvwxyz\";\n",
     "\n",
-    "let letterNumber = 5\n",
+    "// Specify the letter you want to find the number of\n",
+    "const letterToFind = \"e\";\n",
     "\n",
-    "for (var i = 0; i < alphabetList; i++) {\n",
-    "\tif (i === letterNumber) {\n",
-    "\t\tconsole.log(letterNumber + \" is letter number 1 in the alphabet\")\n",
-    "\t}\n",
-    "}\n",
+    "// Find the index of the letter in the alphabet list\n",
+    "const letterNumber = alphabetList.indexOf(letterToFind) + 1;\n",
     "\n",
-    "// Should output:\n",
-    "// \"e\" is letter number 5 in the alphabet"
+    "// Check if the letter exists in the alphabet\n",
+    "if (letterNumber > 0) {\n",
+    "  console.log(`\"${letterToFind}\" is letter number ${letterNumber} in the alphabet`);\n",
+    "} else {\n",
+    "  console.log(`\"${letterToFind}\" is not found in the alphabet`);\n",
+    "}\n"
    ]
   },
   {
@@ -159,7 +162,7 @@
    "source": [
     "### What I Changed\n",
     "\n",
-    "I changed..."
+    "I changed... I chatGPT to rewrite the code"
    ]
   },
   {
@@ -175,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
