--- a/_notebooks/2023-10-3-CalCalc.ipynb
+++ b/_notebooks/2023-10-3-CalCalc.ipynb
@@ -1,18 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "---\n",
     "comments: true\n",
     "layout: post\n",
-    "title: Calculator IPYNB\n",
-    "description: Grab Calculator Code and place in IPYNB\n",
+    "title: Passion Project\n",
+    "description: Calorie Maintenence Calculator\n",
     "type: hacks\n",
-    "courses: { compsci: {week: 2} }\n",
+    "courses: { compsci: {week: 7} }\n",
     "---"
    ]
   }
