--- a/_notebooks/2023-10-3-CalCalc-python.ipynb
+++ b/_notebooks/2023-10-3-CalCalc-python.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Python Backend\n",
+    "type: hacks\n",
+    "permalink: /CalCalc/python\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
@@ -9,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your daily calorie requirement is approximately 2757.01 calories.\n"
+      "Your daily calorie requirement is approximately 3809.68 calories.\n"
      ]
     }
    ],
