--- a/_notebooks/2023-10-3-CalCalc-frontend.ipynb
+++ b/_notebooks/2023-10-3-CalCalc-frontend.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -33,6 +33,13 @@
      "data": {
       "text/html": [
        "\n",
+       "\n",
+       "<html lang=\"en\">\n",
+       "<head>\n",
+       "    <meta charset=\"UTF-8\">\n",
+       "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+       "    <title>Calorie Calculator</title>\n",
+       "</head>\n",
        "\n",
        "<body>\n",
        "    <h1>Calorie Calculator</h1>\n",
@@ -76,8 +83,8 @@
        "            const height = parseFloat(document.getElementById(\"height\").value);\n",
        "            const activity = document.getElementById(\"activity\").value;\n",
        "\n",
-       "            // Send a POST request to the Python backend\n",
-       "            fetch(\"/calculate_calories\", {\n",
+       "            // Send a POST request to the Python backend using relative path\n",
+       "            fetch(\"/_posts/CalCalc/2023-10-3-CalCalc-backend.py\", {\n",
        "                method: \"POST\",\n",
        "                headers: {\n",
        "                    \"Content-Type\": \"application/json\",\n",
@@ -107,6 +114,13 @@
    "source": [
     "%%html\n",
     "\n",
+    "\n",
+    "<html lang=\"en\">\n",
+    "<head>\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+    "    <title>Calorie Calculator</title>\n",
+    "</head>\n",
     "\n",
     "<body>\n",
     "    <h1>Calorie Calculator</h1>\n",
@@ -150,8 +164,8 @@
     "            const height = parseFloat(document.getElementById(\"height\").value);\n",
     "            const activity = document.getElementById(\"activity\").value;\n",
     "\n",
-    "            // Send a POST request to the Python backend\n",
-    "            fetch(\"/calculate_calories\", {\n",
+    "            // Send a POST request to the Python backend using relative path\n",
+    "            fetch(\"/_posts/CalCalc/2023-10-3-CalCalc-backend.py\", {\n",
     "                method: \"POST\",\n",
     "                headers: {\n",
     "                    \"Content-Type\": \"application/json\",\n",
@@ -169,6 +183,13 @@
     "    </script>\n",
     "</body>\n",
     "</html>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code sets up an HTML form with fields for age, gender, weight, height, and activity level. It uses labels and input/select elements to create a user-friendly interface. The \"Calculate\" button allows users to submit the form for processing."
    ]
   }
  ],
