--- a/_notebooks/2023-10-3-CalCalc-python.ipynb
+++ b/_notebooks/2023-10-3-CalCalc-python.ipynb
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your daily calorie requirement is approximately 3809.68 calories.\n"
+      "Your daily calorie requirement is approximately 2566.88 calories.\n"
      ]
     }
    ],
@@ -73,6 +73,28 @@
     "\n",
     "# Display the result\n",
     "print(f\"Your daily calorie requirement is approximately {calories:.2f} calories.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code calculates and displays a person's estimated daily calorie requirements using the Harris-Benedict Equation. Here's how it works:\n",
+    "\n",
+    "1. Constants for Basal Metabolic Rate (BMR) for both males and females are defined at the beginning of the code. These constants are based on the Harris-Benedict Equation and represent the estimated number of calories a person's body needs at rest.\n",
+    "\n",
+    "2. Two functions are defined: `calculate_bmr(age, gender, weight, height)` calculates the BMR based on the provided age, gender, weight, and height, while `calculate_calories(age, gender, weight, height, activity_level)` calculates the daily calorie requirements by adjusting the BMR according to the person's activity level.\n",
+    "\n",
+    "3. The user is prompted to input their age, gender, weight in kilograms, height in centimeters, and activity level. The activity level is used to determine an activity multiplier from the predefined dictionary `ACTIVITY_MULTIPLIERS`.\n",
+    "\n",
+    "4. The `calculate_calories` function is called with the user's input, and it calculates the daily calorie requirements by multiplying the BMR with the activity multiplier obtained from the dictionary.\n",
+    "\n",
+    "5. Finally, the code displays the estimated daily calorie requirement for the user based on their inputs, rounded to two decimal places.\n",
+    "\n",
+    "In summary, this code takes user input for age, gender, weight, height, and activity level, uses the Harris-Benedict Equation to estimate the Basal Metabolic Rate (BMR), adjusts the BMR based on activity level, and then displays the estimated daily calorie requirement for the user's maintenance.\n",
+    "\n",
+    "\n",
+    " It first collects information like age, gender, weight, height, and activity level from the user. Then, it uses a mathematical formula called the Harris-Benedict Equation to estimate their daily calorie requirement based on this information and displays the result in a simple message"
    ]
   }
  ],
