fnished team teaching

--- a/_notebooks/2023-10-24-DevelopingProcedures.ipynb
+++ b/_notebooks/2023-10-24-DevelopingProcedures.ipynb
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "85\n"
+      "88\n"
      ]
     }
    ],
@@ -65,7 +65,13 @@
    "metadata": {},
    "source": [
     "## Popcorn Hack #1:\n",
-    "Identify the name of the procedure below, tell us the purpose and parameters of the procedure and identify the algorithm return value:"
+    "Identify the name of the procedure below, tell us the purpose and parameters of the procedure and identify the algorithm return value:\n",
+    "\n",
+    "- Name:\n",
+    "- Parameters:\n",
+    "- Algorithm (paste lines): \n",
+    "- Return Value: \n",
+    "- Calling Procedure Line"
    ]
   },
   {
@@ -106,33 +112,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nihar is Short.\n",
+      "Will is Tall.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Procedure to create a class for short and tall people\n",
-    "def create_height_classification_class():\n",
-    "    class HeightClassifier:\n",
-    "        def __init__(self, name, height):\n",
-    "            self.name = name\n",
-    "            self.height = height\n",
-    "            self.category = self.classify_height()\n",
+    "# Class Construction\n",
+    "class Short:\n",
+    "    name = \"\"\n",
+    "    height = 0\n",
     "\n",
-    "        def classify_height(self):\n",
-    "            if self.height < 70:\n",
-    "                return \"Short\"\n",
-    "            else:\n",
-    "                return \"Tall\"\n",
+    "class Tall:\n",
+    "    name = \"\"\n",
+    "    height = 0\n",
     "\n",
-    "    return HeightClassifier\n",
+    "# Procedure to Classify as Short or Tall\n",
+    "def classify_person(name, height):\n",
+    "    if height < 70:\n",
+    "        short_person = Short()\n",
+    "        short_person.name = name\n",
+    "        return short_person\n",
+    "    else:\n",
+    "        tall_person = Tall()\n",
+    "        tall_person.name = name\n",
+    "        return tall_person"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Class Definitions: The code defines two classes, \"Short\" and \"Tall,\" each having two attributes: name and height. These attributes can be used to store the name and height of individuals.\n",
     "\n",
-    "# Create the HeightClassifier class using the procedure\n",
-    "Person = create_height_classification_class()\n",
-    "\n",
-    "# Create  objects and classify them as short or tall\n",
-    "person1 = Person(\"Nihar\", 65)\n",
-    "person2 = Person(\"Will\", 76)\n",
-    "person3 = Person(\"Jayden\", 80)\n"
+    "Classification Procedure: The classify_person function takes two parameters: name and height. Depending on the provided height, it creates an instance of either the \"Short\" or \"Tall\" class. It sets the name attribute for the person and returns the corresponding instance."
    ]
   },
   {
@@ -149,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create your own procedure to classify at least two objects"
+    "# Popcorn Hack 2"
    ]
   },
   {
@@ -161,51 +181,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nihar is Short\n",
-      "Will is Tall\n",
-      "Jayden is Tall\n",
-      "Howie is Short\n"
+      "Nihar is Tall.\n",
+      "Will is Tall.\n",
+      "Jayden is Tall.\n",
+      "Howie is Tall.\n"
      ]
     }
    ],
    "source": [
-    "# Procedure to create a class for short and tall people\n",
-    "def create_height_classification_class():\n",
-    "    class HeightClassifier:\n",
-    "        def __init__(self, name, height):\n",
-    "            self.name = name\n",
-    "            self.height = height\n",
-    "            self.category = self.classify_height()\n",
+    "# Creating Classes\n",
+    "class Short:\n",
+    "    name = \"\"\n",
+    "    height = 0\n",
     "\n",
-    "        def classify_height(self):\n",
-    "            if self.height < 69:\n",
-    "                return \"Short\"\n",
-    "            else:\n",
-    "                return \"Tall\"\n",
+    "class Tall:\n",
+    "    name = \"\"\n",
+    "    height = 0\n",
     "\n",
-    "    return HeightClassifier\n",
+    "#Procedure to classify as short or tall\n",
+    "def classify_height(name, height):\n",
+    "    if height < 70:\n",
+    "        short_person = Short()\n",
+    "        short_person.name = name\n",
+    "        return short_person\n",
+    "    else:\n",
+    "        tall_person = Tall()\n",
+    "        tall_person.name = name\n",
+    "        return tall_person\n",
     "\n",
-    "# Create the HeightClassifier class using the procedure\n",
-    "Person = create_height_classification_class()\n",
+    "# Create objects and classify them as short or tall\n",
+    "person1 = classify_height(\"Nihar\", 65)\n",
+    "person2 = classify_height(\"Will\", 76)\n",
+    "person3 = classify_height(\"Jayden\", 75)\n",
+    "person4 = classify_height(\"Howie\", 70)\n",
     "\n",
-    "# Create  objects and classify them as short or tall\n",
-    "person1 = Person(\"Nihar\", 65)\n",
-    "person2 = Person(\"Will\", 76)\n",
-    "person3 = Person(\"Jayden\", 80)\n",
-    "person4 = Person(\"Howie\", 60)\n",
-    "\n",
-    "# Statements to call methods of an object\n",
-    "print(f\"{person1.name} is {person1.category}\")\n",
-    "print(f\"{person2.name} is {person2.category}\")\n",
-    "print(f\"{person3.name} is {person3.category}\")\n",
-    "print(f\"{person4.name} is {person4.category}\")\n"
+    "# Display results for all four objects\n",
+    "for person in [person1, person2, person3, person4]:\n",
+    "    print(f\"{person.name} is {'Short' if person is Short else 'Tall'}.\")\n",
+    "\n"
    ]
   },
   {
