team teach final

--- a/_notebooks/2023-10-24-DevelopingProcedures.ipynb
+++ b/_notebooks/2023-10-24-DevelopingProcedures.ipynb
@@ -112,18 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nihar is Short.\n",
-      "Will is Tall.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Class Construction\n",
     "class Short:\n",
@@ -181,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +208,7 @@
     "        return tall_person\n",
     "\n",
     "# Create objects and classify them as short or tall\n",
-    "person1 = classify_height(\"Nihar\", 65)\n",
+    "person1 = classify_height(\"Nihar\", 70)\n",
     "person2 = classify_height(\"Will\", 76)\n",
     "person3 = classify_height(\"Jayden\", 75)\n",
     "person4 = classify_height(\"Howie\", 70)\n",
@@ -234,7 +225,7 @@
    "source": [
     "## HW Hacks!!\n",
     "1. Create a procedure that replaces a value with a new one (ex. update height)\n",
-    "2. Create a procedure that constrcuts classes of your choosing and create at least 4 objects to be sorted into your classes. Call your procedure to display your objects."
+    "2. Create a procedure that constructs classes of your choosing and create at least 4 objects to be sorted into your classes. Call your procedure to display your objects."
    ]
   },
   {
