--- a/_notebooks/2023-10-06-boolean_if.ipynb
+++ b/_notebooks/2023-10-06-boolean_if.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Boolean If:\n",
+    "---\n",
+    "toc: false\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Booleons Team Teach\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 8} }\n",
+    "permalink: /booleonsteamteachlesson\n",
+    "--- \n",
+    "\n",
     "## 3.5 & 3.6 Boolean Expressions & Conditionals"
    ]
   },
