--- a/_notebooks/2023-10-12-TeamTeach_DevelopingAlgorithms.ipynb
+++ b/_notebooks/2023-10-12-TeamTeach_DevelopingAlgorithms.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Developing Algorithms"
+    "---\n",
+    "toc: false\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Developing Algorithms Team Teach\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 9} }\n",
+    "permalink: /algorithmsteamteachlesson\n",
+    "--- "
    ]
   },
   {
