--- a/_notebooks/2023-10-18-DTMA_teamteach.ipynb
+++ b/_notebooks/2023-10-18-DTMA_teamteach.ipynb
@@ -5,13 +5,14 @@
    "metadata": {},
    "source": [
     "---\n",
+    "toc: false\n",
     "comments: true\n",
     "layout: post\n",
-    "title: our team teach lesson\n",
-    "courses: {csp: {week: 9} }\n",
+    "title: Lists and Searches Team Teach\n",
     "type: hacks\n",
-    "permalink: /teach/home\n",
-    "---"
+    "courses: { compsci: {week: 9} }\n",
+    "permalink: /list&searchesteamteachlesson\n",
+    "--- "
    ]
   },
   {
@@ -92,12 +93,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 9, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "#Enter code here\n",
     "list = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "list.insert(3, 9)\n",
     "print(list)"
    ]
   },
@@ -144,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n"
+      "98\n"
      ]
     }
    ],
@@ -162,7 +172,7 @@
     "\n",
     "for score in nums:\n",
     "    if score > max_value:\n",
-    "            min_value = score\n",
+    "            max_value = score\n",
     "\n",
     "\n",
     "print(max_value)"
@@ -223,15 +233,7 @@
     "    if len(word) != 3: #if the length of the word is not equal to three\n",
     "        new_words.append(word)  #adds it to a new list if the length is not equal to three\n",
     "\n",
-    "print(new_words)\n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "     \n",
-    "\n"
+    "print(new_words)\n"
    ]
   },
   {
@@ -285,7 +287,7 @@
     "B= [6, -1, 5, 12, 8]\n",
     "\n",
     "#Type your choices below\n",
-    "\n"
+    "A and fruits"
    ]
   },
   {
