--- a/_notebooks/2023-10-24-DevelopingProcedures.ipynb
+++ b/_notebooks/2023-10-24-DevelopingProcedures.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "toc: false\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Developing Procedures Team Teach\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 10} }\n",
+    "permalink: /DevelopingProceduresteamteachlesson\n",
+    "--- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.12-3.13 Developing Procedures"
    ]
   },
@@ -151,7 +166,7 @@
    "metadata": {},
    "source": [
     "## Popcorn Hack #2:\n",
-    "Use the example above to use a procedure to create two classes of your choosing. Create at least 2 objects and class them with your procedure"
+    "Use the example above to create at least two classes and a procedure to classify potential objects into these classes."
    ]
   },
   {
@@ -172,14 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nihar is Tall.\n",
+      "Nihar is Short.\n",
       "Will is Tall.\n",
       "Jayden is Tall.\n",
       "Howie is Tall.\n"
@@ -196,26 +211,28 @@
     "    name = \"\"\n",
     "    height = 0\n",
     "\n",
-    "#Procedure to classify as short or tall\n",
+    "# Procedure to classify as short or tall\n",
     "def classify_height(name, height):\n",
     "    if height < 70:\n",
     "        short_person = Short()\n",
     "        short_person.name = name\n",
+    "        short_person.height = height\n",
     "        return short_person\n",
     "    else:\n",
     "        tall_person = Tall()\n",
     "        tall_person.name = name\n",
+    "        tall_person.height = height\n",
     "        return tall_person\n",
     "\n",
     "# Create objects and classify them as short or tall\n",
-    "person1 = classify_height(\"Nihar\", 70)\n",
+    "person1 = classify_height(\"Nihar\", 60)\n",
     "person2 = classify_height(\"Will\", 76)\n",
     "person3 = classify_height(\"Jayden\", 75)\n",
     "person4 = classify_height(\"Howie\", 70)\n",
     "\n",
     "# Display results for all four objects\n",
     "for person in [person1, person2, person3, person4]:\n",
-    "    print(f\"{person.name} is {'Short' if person is Short else 'Tall'}.\")\n",
+    "    print(f\"{person.name} is {'Short' if isinstance(person, Short) else 'Tall'}.\")\n",
     "\n"
    ]
   },
@@ -234,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# HW Hack 1"
+    "# HW Hack 1\n"
    ]
   },
   {
