--- a/_notebooks/2023-10-4-studentvariable.ipynb
+++ b/_notebooks/2023-10-4-studentvariable.ipynb
@@ -1,8 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "toc: false\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Variables Team Teach\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 8} }\n",
+    "permalink: /variablesteamteachlesson\n",
+    "--- "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
