--- a/_notebooks/2023-10-05-Algorithms_Team_Teach.ipynb
+++ b/_notebooks/2023-10-05-Algorithms_Team_Teach.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "toc: false\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Algorithms Team Teach\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 8} }\n",
+    "permalink: /algorithmsteamteachlesson\n",
+    "--- \n",
+    "\n",
     "# Algorithms - 3.3 & 3.4\n",
     "\n",
     "## Overview: what is an ALGORITHM?\n",
