--- a/_notebooks/2023-11-16-Beneficial-and-Harmful-Effects.ipynb
+++ b/_notebooks/2023-11-16-Beneficial-and-Harmful-Effects.ipynb
@@ -5,13 +5,14 @@
    "metadata": {},
    "source": [
     "---\n",
+    "toc: True\n",
     "comments: True\n",
     "layout: post\n",
-    "toc: True\n",
     "title: Beneficial and Harmful Effects Team Teach\n",
     "description: Team Teach\n",
     "type: hacks\n",
-    "courses: { \"compsci\": { \"week\": 2 } }\n",
+    "courses: { \"compsci\": { \"week\": 14 } }\n",
+    "permalink: /beneficialandharmfuleffects\n",
     "---"
    ]
   },
