--- a/_notebooks/2023-12-07-TeamTeach.ipynb
+++ b/_notebooks/2023-12-07-TeamTeach.ipynb
@@ -10,6 +10,7 @@
     "layout: post\n",
     "title: Digital Divide Team Teach\n",
     "type: tangibles\n",
+    "courses: { compsci: {week: 14} }\n",
     "---"
    ]
   },
