--- a/_notebooks/2023-12-12-Computing-Bias.ipynb
+++ b/_notebooks/2023-12-12-Computing-Bias.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "## Hack 1: \n",
     "What is another example of a human bias being implemented into an algorithm? \n",
-    "> Answer: \n"
+    "> Answer: The App store shows you apps similar to ones that you've previously downloaded. \n"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "source": [
     "## Hack 2: \n",
     "What is another way a programmer can reduce bias in their softwares?\n",
-    "> Answer:"
+    "> Answer: Ensuring that their software encompasses a wide range of demographic, using random samples, etc"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "source": [
     "## Hack 3:\n",
     "What are some other examples of intentional and/or unintentional bias in innovations (games, social media, technology, etc.)?\n",
-    "> Answer:"
+    "> Answer: OG fortnite is biased to a slightly older audience, as the appeal is to players who played the game when it first came out"
    ]
   },
   {
@@ -118,12 +118,13 @@
     "### Question 1: \n",
     "Define \"computer bias\" in your own words and explain how it can result from intentional or unintentional factors in software development. Give a brief example of this. Explain how programmers can actively work to reduce bias in their algorithms?\n",
     "\n",
-    "> Answer:\n",
+    "> Answer: Computer bias is when a program acts differently or is centered around different audiences because of the info it gets from people or because of how it's coded. Intentional factors for computer bias can be like when programs generate specific content for a user based on whether or not they pay, such as in youtube plus or spotify premium. Unintentional bias can pop up in things like facial recognition, where the system might be better at recognizing certain skin tones than others. To make things more fair, programmers can make their systems better by using a mix of data that includes people from all backgrounds and demographics.\n",
+    "\n",
     "\n",
     "### Question 2:\n",
     "Briefly describe the two types of bias in software development and provide examples from the gaming industry and social media platforms. How might biases in software design affect user engagement and experiences?\n",
     "\n",
-    "> Answer:"
+    "> Answer: The two types of bias in software development are intentional and unintentional bias. Intentional bias in video games might involve setting age requirements to target a specific audience, like having age restrictions in first-person shooters to keep younger kids from playing. An example of unintentional bias is seen in content algorithms on social media platforms to attract more user engagement, not really preferring a type of audience over the other. Biases can lead a program to perform in unintended ways, causing inconvenience and disinterest or the opposite depending on the users or."
    ]
   }
  ],
