--- a/_notebooks/2023-11-27-internet.ipynb
+++ b/_notebooks/2023-11-27-internet.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "---\n",
+    "toc: true\n",
     "comments: true\n",
-    "layout: notebook\n",
+    "layout: post\n",
     "title: The Internet\n",
     "description: Big Idea 4.1 Student Teaching\n",
     "type: tangibles\n",
-    "toc: true\n",
-    "courses: { compsci: {week: 1} }\n",
+    "courses: { compsci: {week: 12} }\n",
     "---"
    ]
   },
