--- a/_notebooks/2023-11-30-StudentTeahing.ipynb
+++ b/_notebooks/2023-11-30-StudentTeahing.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "---\n",
+    "toc: true\n",
     "comments: true\n",
-    "layout: notebook\n",
+    "layout: post\n",
     "title: Team Teaching - Fault Tolerance & Parallel and Distributed Computing\n",
     "description: College Board 4.2 & 4.3 - Fault Tolerance & Parallel and Distributed Computing\n",
     "type: tangibles\n",
-    "courses: { csp: {week: 13} }\n",
-    "categories: [C4.1]\n",
+    "courses: { compsci: {week: 13} }\n",
     "---"
    ]
   },
