--- a/_notebooks/2023-12-13-Undecided-Problems.ipynb
+++ b/_notebooks/2023-12-13-Undecided-Problems.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: false\n",
+    "toc: true\n",
     "comments: True\n",
     "layout: post\n",
     "title: Undecidable Problems\n",
     "description: :D\n",
-    "type: ccc\n",
-    "courses: { csp: {week: 15} }\n",
+    "type: tangibles\n",
+    "courses: { compsci: {week: 15} }\n",
     "---"
    ]
   },
