--- a/_notebooks/2023-11-16-teamteach.ipynb
+++ b/_notebooks/2023-11-16-teamteach.ipynb
@@ -64,12 +64,27 @@
     "# Homework\n",
     "## Question 1  \n",
     "Explain the concept of crowdsourcing. Provide examples of how it is commonly used in different fields.\n",
+    "\n",
+    "Crowdsourcing is a collaborative approach that involves obtaining input, ideas, or services from a large group of people, typically through an online platform; examples include Wikipedia for information gathering, Kickstarter for funding creative projects, and citizen science initiatives like Foldit for solving complex scientific problems.\n",
+    "\n",
+    "\n",
     "## Question 2  \n",
     "Discuss the benefits and challenges associated with crowdsourcing. How can organizations effectively harness the power of crowdsourcing while mitigating potential drawbacks?\n",
+    "\n",
+    "The benefits of crowdsourcing include access to diverse expertise, cost-effectiveness, and rapid idea generation, but challenges may arise in quality control, intellectual property issues, and managing large-scale collaboration; organizations can effectively harness crowdsourcing by establishing clear guidelines, providing incentives, fostering a sense of community, and implementing robust moderation mechanisms to ensure the quality and integrity of contributions.\n",
+    "\n",
+    "\n",
     "## Question 3  \n",
     "Identify a real-world example of a successful crowdsourcing project. Explain the project, its goals, and the positive outcomes achieved through the collaboration of a large group of people.\n",
+    "\n",
+    "One real-world example of a successful crowdsourcing project is the \"Foldit\" initiative, where online gamers collaborated to solve complex problems in protein folding, leading to the discovery of a novel enzyme structure that had stumped scientists for years, showcasing the potential of harnessing collective intelligence for scientific advancements.\n",
+    "\n",
+    "\n",
+    "\n",
     "### Question 4\n",
-    "Create a hypothetical scenario where crowdsourcing could be applied to solve a specific problem. Describe the problem, the type of contributions you would seek from the crowd, and the potential impact of implementing the crowdsourced solution."
+    "Create a hypothetical scenario where crowdsourcing could be applied to solve a specific problem. Describe the problem, the type of contributions you would seek from the crowd, and the potential impact of implementing the crowdsourced solution.\n",
+    "\n",
+    "Foldit is a notable example of successful crowdsourcing, where online gamers collaborated to solve complex problems in protein folding, leading to the discovery of a novel enzyme structure that had stumped scientists for years, showcasing the potential of harnessing collective intelligence for scientific advancements."
    ]
   }
  ],
