--- a/_notebooks/2023-12-13-Undecided-Problems.ipynb
+++ b/_notebooks/2023-12-13-Undecided-Problems.ipynb
@@ -107,6 +107,13 @@
     "\n",
     "Research and explain how modern  systems or  browsers deal with the aspects of the halting problem when a program takes too long to load. Provide examples of mechanisms or strategies implemented in real-world scenarios to manage unresponsive programs or prolonged loading times."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modern systems and browsers  employ timeout mechanisms to address the halting problem when a program takes too long to load, setting  limits for acceptable response times and terminating an unresponsive process if it exceeds the limit. For example, google displays a message indicating that a webpage is unresponsive with the fun little icon, or offers the dinosaur game to play when it can't load."
+   ]
   }
  ],
  "metadata": {
