md fix cbquiz review

--- a/_notebooks/2023-12-21-CB2020MCQ-practice.ipynb
+++ b/_notebooks/2023-12-21-CB2020MCQ-practice.ipynb
@@ -65,29 +65,7 @@
     "\n",
     "> Answer: Program A and program B display identical values in the same order. Program A initializes i to 1. Inside the loop, it prints i and then increments i. The loop terminates when i is greater than 10, which occurs after 10 is printed. Program A prints 1 2 3 4 5 6 7 8 9 10. Program B initializes i to 0. Inside the loop, it increments i and then prints i. The loop terminates when i equals 10, which occurs after 10 is printed. Program B prints 1 2 3 4 5 6 7 8 9 10.\n",
     "\n",
-    "The following code segment is intended to draw the figure.\n",
-    "\n",
-    "startX \n",
-    " 2\n",
-    "\n",
-    "startY \n",
-    " 6\n",
-    "\n",
-    "endX \n",
-    " 8\n",
-    "\n",
-    "endY \n",
-    " 8\n",
-    "\n",
-    "REPEAT 4 TIMES\n",
-    "\n",
-    "{\n",
-    "\n",
-    "<MISSING CODE>\n",
-    "\n",
-    "}\n",
-    "\n",
-    "Which of the following can be used to replace <MISSING CODE> so that the figure is drawn correctly?\n",
+    "Which of the following can be used to replace MISSING CODE so that the figure is drawn correctly?\n",
     "\n",
     "> Answer: DrawLine (startX, startY, endX, endY)endY endY - 2\n",
     "\n",
