--- a/_posts/2024-02-14-N@TMBlog.md
+++ b/_posts/2024-02-14-N@TMBlog.md
@@ -17,11 +17,24 @@ permalink: /N@TM2
 ## Add-ons for Individual Review
 Improve upon blackjack game with animations, add sound for racetrack to improve user engagement with functions.
 
+![makedebug]({{site.baseurl}}/images/showingoffproject.png)
+
+(Us showing off our lovely project!)
+
 ## Blog on Event
 
 ![makedebug]({{site.baseurl}}/images/natm.png)
 
+(Aidan Lau loves it!)
+
+
 One of the projects that impressed me was the game designed by Rayyan, Jason, and Will's group, I thought it was planned out and designed very interestingly, and it almost felt like an actual game someone might play online or buy.
 
+<br>
+<br>
+<br>
+![makedebug]({{site.baseurl}}/images/stockpredicter.png)
+
+Another interesting thing was the stock predicting program, which has a lot of cool applications in the real world.
 
 Another thing that I found interesting outside of our class was the photographs taken by the photography classes.
