lebron code fix

--- a/_notebooks/2024-03-07-csvdatabase.ipynb
+++ b/_notebooks/2024-03-07-csvdatabase.ipynb
@@ -272,39 +272,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted stats for the upcoming game against LAC :\n",
-      "Minutes played: 30.0\n",
-      "Points: 18.0\n",
-      "Assists: 31.0\n",
-      "Defensive rebounds: 32.0\n",
-      "Steals: 23.0\n",
-      "Blocks: 22.0\n",
-      "Turnovers: 27.0\n"
+      "Average stats for the last 10 matchups against GSW :\n",
+      "Minutes played: 37.1\n",
+      "Points: 27.3\n",
+      "Assists: 5.4\n",
+      "Defensive rebounds: 6.9\n",
+      "Steals: 1.4\n",
+      "Blocks: 1.0\n",
+      "Turnovers: 5.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3l/zzpb17n16zq0yrbx8c40rps40000gp/T/ipykernel_62886/3316333749.py:28: SettingWithCopyWarning: \n",
+      "/var/folders/3l/zzpb17n16zq0yrbx8c40rps40000gp/T/ipykernel_62886/1288292844.py:31: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  last_10_games['mp'] = last_10_games['mp'].apply(lambda x: int(x.split(':')[0])*60 + int(x.split(':')[1]))\n"
+      "  last_10_games['mp'] = last_10_games['mp'].apply(convert_to_minutes)\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "# Load LeBron career data\n",
     "lebron_career_df = pd.read_csv('/Users/Jayden.Chen/vscode/csp/modeldata/lebron_career.csv')\n",
@@ -330,31 +329,30 @@
     "last_10_games = last_10_matchups(opponent_data)\n",
     "\n",
     "# Convert 'mp' to minutes\n",
-    "last_10_games['mp'] = last_10_games['mp'].apply(lambda x: int(x.split(':')[0])*60 + int(x.split(':')[1]))\n",
+    "def convert_to_minutes(time_str):\n",
+    "    hours, minutes = map(int, time_str.split(':'))\n",
+    "    return hours * 60 + minutes\n",
     "\n",
-    "# Prepare features and target variables\n",
-    "X = last_10_games[['mp', 'pts', 'ast', 'drb', 'stl', 'blk', 'tov']]\n",
-    "y = last_10_games['pts']  # Predicting points scored\n",
+    "last_10_games['mp'] = last_10_games['mp'].apply(convert_to_minutes)\n",
     "\n",
-    "# Train a linear regression model\n",
-    "model = LinearRegression()\n",
-    "model.fit(X, y)\n",
+    "# Calculate average stats for minutes played, points, assists, defensive rebounds, steals, blocks, and turnovers\n",
+    "average_stats = last_10_games[['mp', 'pts', 'ast', 'drb', 'stl', 'blk', 'tov']].mean()\n",
     "\n",
-    "# Predict LeBron's stats for the upcoming game\n",
-    "upcoming_game_stats = model.predict(X)\n",
+    "# Round average stats to the nearest tenth value\n",
+    "average_stats_rounded = average_stats.round(1)\n",
     "\n",
-    "# Round predicted stats to the nearest tenth value\n",
-    "upcoming_game_stats_rounded = [round(stat, 1) for stat in upcoming_game_stats]\n",
+    "# Convert average minutes played to hours\n",
+    "average_minutes_played_hours = round(average_stats_rounded['mp'] / 60, 1)\n",
     "\n",
-    "# Print predicted stats\n",
-    "print(\"Predicted stats for the upcoming game against\", opponent, \":\")\n",
-    "print(\"Minutes played:\", upcoming_game_stats_rounded[0])\n",
-    "print(\"Points:\", upcoming_game_stats_rounded[1])\n",
-    "print(\"Assists:\", upcoming_game_stats_rounded[2])\n",
-    "print(\"Defensive rebounds:\", upcoming_game_stats_rounded[3])\n",
-    "print(\"Steals:\", upcoming_game_stats_rounded[4])\n",
-    "print(\"Blocks:\", upcoming_game_stats_rounded[5])\n",
-    "print(\"Turnovers:\", upcoming_game_stats_rounded[6])\n"
+    "# Print average stats\n",
+    "print(\"Average stats for the last 10 matchups against\", opponent, \":\")\n",
+    "print(\"Minutes played:\", average_minutes_played_hours,)\n",
+    "print(\"Points:\", average_stats_rounded['pts'])\n",
+    "print(\"Assists:\", average_stats_rounded['ast'])\n",
+    "print(\"Defensive rebounds:\", average_stats_rounded['drb'])\n",
+    "print(\"Steals:\", average_stats_rounded['stl'])\n",
+    "print(\"Blocks:\", average_stats_rounded['blk'])\n",
+    "print(\"Turnovers:\", average_stats_rounded['tov'])\n"
    ]
   }
  ],
